--- a/Frontend/src/app/view/profile/customer-profile/cp-profile-settings/cp-profile-settings.component.html
+++ b/Frontend/src/app/view/profile/customer-profile/cp-profile-settings/cp-profile-settings.component.html
@@ -1,63 +1,93 @@
-<!-- Authorization info-->
-<div class="row pt-4 mt-3">
-  <div class="col-lg-3">
-    <h2 class="h4">Authorization info</h2>
-  </div>
-  <div class="col-lg-9">
-    <div class="border rounded-3 p-3" id="auth-info">
-      <!-- Email-->
-      <div class="border-bottom pb-3 mb-3">
-        <div class="d-flex align-items-center justify-content-between">
-          <div class="pe-2">
-            <label class="form-label fw-bold">Email</label>
-            <div id="email-value">annette_black@email.com</div>
+<form #cpProfileForm="ngForm" (ngSubmit)="cpProfileForm.form.valid && onSubmit()" novalidate>
+
+  <!-- Authorization info-->
+  <div class="row pt-4 mt-3">
+    <div class="col-lg-3">
+      <h2 class="h4">Authorization info</h2>
+    </div>
+    <div class="col-lg-9">
+      <div class="border rounded-3 p-3" id="auth-info">
+        <!-- Email-->
+        <div class="border-bottom pb-3 mb-3">
+          <div class="d-flex align-items-center justify-content-between">
+            <div class="pe-2">
+              <label class="form-label fw-bold">Email</label>
+              <div id="email-value">annette_black@email.com</div>
+            </div>
+            <div class="me-n3" data-bs-toggle="tooltip" title="Edit"><a class="nav-link py-0" href="#email-collapse"
+                                                                        data-bs-toggle="collapse"><i
+              class="fi-edit"></i></a></div>
           </div>
-          <div class="me-n3" data-bs-toggle="tooltip" title="Edit"><a class="nav-link py-0" href="#email-collapse" data-bs-toggle="collapse"><i class="fi-edit"></i></a></div>
-        </div>
-        <div class="collapse" id="email-collapse" data-bs-parent="#auth-info">
-          <input class="form-control mt-3" type="email" data-bs-binded-element="#email-value" data-bs-unset-value="Not specified" value="annette_black@email.com">
-        </div>
-      </div>
-      <!-- Password-->
-      <div>
-        <div class="d-flex align-items-center justify-content-between">
-          <div class="pe-2">
-            <label class="form-label fw-bold">Password</label>
-            <div>********</div>
+          <div class="collapse" id="email-collapse" data-bs-parent="#auth-info">
+            <input class="form-control mt-3" type="email" data-bs-binded-element="#email-value"
+                   data-bs-unset-value="Not specified" value="annette_black@email.com">
           </div>
-          <div class="me-n3" data-bs-toggle="tooltip" title="Edit"><a class="nav-link py-0" href="#password-collapse" data-bs-toggle="collapse"><i class="fi-edit"></i></a></div>
         </div>
-        <div class="collapse" id="password-collapse" data-bs-parent="#auth-info">
-          <div class="row gx-3 align-items-center my-3">
-            <label class="col-sm-4 col-md-3 col-form-label" for="account-password-current">Current password:</label>
-            <div class="col-sm-8 col-md-9">
-              <div class="password-toggle">
-                <input class="form-control" type="password" id="account-password-current" placeholder="Enter current password">
-                <label class="password-toggle-btn" aria-label="Show/hide password">
-                  <input class="password-toggle-check" type="checkbox"><span class="password-toggle-indicator"></span>
-                </label>
+        <!-- Password-->
+        <div>
+          <div class="d-flex align-items-center justify-content-between">
+            <div class="pe-2">
+              <label class="form-label fw-bold">Password</label>
+              <div>********</div>
+            </div>
+            <div class="me-n3" data-bs-toggle="tooltip" title="Edit"><a class="nav-link py-0" href="#password-collapse"
+                                                                        data-bs-toggle="collapse"><i
+              class="fi-edit"></i></a></div>
+          </div>
+          <div class="collapse" id="password-collapse" data-bs-parent="#auth-info">
+            <div class="row gx-3 align-items-center my-3">
+              <label class="col-sm-4 col-md-3 col-form-label" for="account-password-current">Current password:</label>
+              <div class="col-sm-8 col-md-9">
+                <div class="password-toggle">
+                  <input class="form-control" [type]="passwordView.curView?'text':'password'"
+                         id="account-password-current"
+                         placeholder="Enter current password" [required]="customerProfile.user.password!==''"
+                         [(ngModel)]="customerProfile.user.cPassword" #curPassword="ngModel" name="curPassword">
+                  <label class="password-toggle-btn" aria-label="Show/hide password">
+                    <input class="password-toggle-check" type="checkbox">
+                    <span class="password-toggle-indicator" id="password-toggle-indicator1"></span>
+                  </label>
+                </div>
+                <div *ngIf="(curPassword.dirty || cpProfileForm.submitted) && curPassword.errors?.required"
+                     class="validErr">
+                  Current password is required
+                </div>
               </div>
             </div>
-          </div>
-          <div class="row gx-3 align-items-center my-3">
-            <label class="col-sm-4 col-md-3 col-form-label" for="account-password-new">New password:</label>
-            <div class="col-sm-8 col-md-9">
-              <div class="password-toggle">
-                <input class="form-control" type="password" id="account-password-new" placeholder="Enter new password">
-                <label class="password-toggle-btn" aria-label="Show/hide password">
-                  <input class="password-toggle-check" type="checkbox"><span class="password-toggle-indicator"></span>
-                </label>
+            <div class="row gx-3 align-items-center my-3">
+              <label class="col-sm-4 col-md-3 col-form-label" for="account-password-new">New password:</label>
+              <div class="col-sm-8 col-md-9">
+                <div class="password-toggle">
+                  <input class="form-control" [type]="passwordView.newView?'text':'password'" id="account-password-new"
+                         placeholder="Enter new password"
+                         [(ngModel)]="customerProfile.user.password" #newPassword="ngModel" name="password"
+                         appConfirmPassword [password]="customerProfile.user.passwordC">
+                  <label class="password-toggle-btn" aria-label="Show/hide password">
+                    <input class="password-toggle-check" type="checkbox">
+                    <span class="password-toggle-indicator" id="password-toggle-indicator2"></span>
+                  </label>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="row gx-3 align-items-center">
-            <label class="col-sm-4 col-md-3 col-form-label" for="account-password-confirm">Confirm new password:</label>
-            <div class="col-sm-8 col-md-9">
-              <div class="password-toggle">
-                <input class="form-control" type="password" id="account-password-confirm" placeholder="Confirm new password">
-                <label class="password-toggle-btn" aria-label="Show/hide password">
-                  <input class="password-toggle-check" type="checkbox"><span class="password-toggle-indicator"></span>
-                </label>
+            <div class="row gx-3 align-items-center">
+              <label class="col-sm-4 col-md-3 col-form-label" for="account-password-confirm">Confirm new
+                password:</label>
+              <div class="col-sm-8 col-md-9">
+                <div class="password-toggle">
+                  <input class="form-control" type="password" id="account-password-confirm"
+                         placeholder="Confirm new password"
+                         [(ngModel)]="customerProfile.user.passwordC" #confNewPassword="ngModel" name="passwordC"
+                         appConfirmPassword [password]="customerProfile.user.password">
+                  <label class="password-toggle-btn" aria-label="Show/hide password">
+                    <input class="password-toggle-check" type="checkbox">
+                    <span class="password-toggle-indicator" id="password-toggle-indicator3"></span>
+                  </label>
+                </div>
+                <div
+                  *ngIf="(confNewPassword.dirty || newPassword.dirty || cpProfileForm.submitted) && (confNewPassword.errors?.confirmPassword || newPassword.errors?.confirmPassword)"
+                  class="validErr">
+                  Password does not match
+                </div>
               </div>
             </div>
           </div>
@@ -65,99 +95,116 @@
       </div>
     </div>
   </div>
-</div>
 
-<!-- Personal details-->
-<div class="row pt-4 mt-2">
-  <div class="col-lg-3">
-    <h2 class="h4">Personal details</h2>
-  </div>
-  <div class="col-lg-9">
-    <div class="border rounded-3 p-3" id="personal-details">
-      <!-- Full name-->
-      <div class="border-bottom pb-3 mb-3">
-        <div class="d-flex align-items-center justify-content-between">
-          <div class="pe-2">
-            <label class="form-label fw-bold">Full name</label>
-            <div id="fn-value">Annette Black</div>
+  <!-- Personal details-->
+  <div class="row pt-4 mt-2">
+    <div class="col-lg-3">
+      <h2 class="h4">Personal details</h2>
+    </div>
+    <div class="col-lg-9">
+      <div class="border rounded-3 p-3" id="personal-details">
+        <!-- Full name-->
+        <div class="border-bottom pb-3 mb-3">
+          <div class="d-flex align-items-center justify-content-between">
+            <div class="pe-2">
+              <label class="form-label fw-bold">Full name</label>
+              <div id="fn-value">Annette Black</div>
+            </div>
+            <div class="me-n3" data-bs-toggle="tooltip" title="Edit"><a class="nav-link py-0" href="#fn-collapse"
+                                                                        data-bs-toggle="collapse"><i
+              class="fi-edit"></i></a></div>
           </div>
-          <div class="me-n3" data-bs-toggle="tooltip" title="Edit"><a class="nav-link py-0" href="#fn-collapse" data-bs-toggle="collapse"><i class="fi-edit"></i></a></div>
-        </div>
-        <div class="collapse" id="fn-collapse" data-bs-parent="#personal-details">
-          <input class="form-control mt-3" type="email" data-bs-binded-element="#fn-value" data-bs-unset-value="Not specified" value="Annette Black">
-        </div>
-      </div>
-      <!-- Gender-->
-      <div class="border-bottom pb-3 mb-3">
-        <div class="d-flex align-items-center justify-content-between">
-          <div class="pe-2">
-            <label class="form-label fw-bold">Gender</label>
-            <div id="gender-value">Female</div>
+          <div class="collapse" id="fn-collapse" data-bs-parent="#personal-details">
+            <input class="form-control mt-3" type="email" data-bs-binded-element="#fn-value"
+                   data-bs-unset-value="Not specified" value="Annette Black">
           </div>
-          <div class="me-n3" data-bs-toggle="tooltip" title="Edit"><a class="nav-link py-0" href="#gender-collapse" data-bs-toggle="collapse"><i class="fi-edit"></i></a></div>
         </div>
-        <div class="collapse" id="gender-collapse" data-bs-parent="#personal-details">
-          <select class="form-select mt-3" data-bs-binded-element="#gender-value">
-            <option value="" disabled>Select your gender</option>
-            <option value="Male">Male</option>
-            <option value="Female" selected>Female</option>
-          </select>
-        </div>
-      </div>
-      <!-- Date of birth-->
-      <div class="border-bottom pb-3 mb-3">
-        <div class="d-flex align-items-center justify-content-between">
-          <div class="pe-2">
-            <label class="form-label fw-bold">Date of birth</label>
-            <div id="birth-value">Not specified</div>
+        <!-- Gender-->
+        <div class="border-bottom pb-3 mb-3">
+          <div class="d-flex align-items-center justify-content-between">
+            <div class="pe-2">
+              <label class="form-label fw-bold">Gender</label>
+              <div id="gender-value">Female</div>
+            </div>
+            <div class="me-n3" data-bs-toggle="tooltip" title="Edit"><a class="nav-link py-0" href="#gender-collapse"
+                                                                        data-bs-toggle="collapse"><i
+              class="fi-edit"></i></a></div>
           </div>
-          <div class="me-n3" data-bs-toggle="tooltip" title="Edit"><a class="nav-link py-0" href="#birth-collapse" data-bs-toggle="collapse"><i class="fi-edit"></i></a></div>
+          <div class="collapse" id="gender-collapse" data-bs-parent="#personal-details">
+            <select class="form-select mt-3" data-bs-binded-element="#gender-value">
+              <option value="" disabled>Select your gender</option>
+              <option value="Male">Male</option>
+              <option value="Female" selected>Female</option>
+            </select>
+          </div>
         </div>
-        <div class="collapse" id="birth-collapse" data-bs-parent="#personal-details">
-          <div class="mt-3 pt-3 border-top">
-            <div class="input-group">
-              <input class="form-control date-picker rounded pe-5" type="text" data-bs-binded-element="#birth-value" data-datepicker-options="{&quot;altInput&quot;: true, &quot;altFormat&quot;: &quot;F j, Y&quot;, &quot;dateFormat&quot;: &quot;F j, Y&quot;}" placeholder="Choose date"><i class="fi-calendar text-muted position-absolute top-50 end-0 translate-middle-y me-3"></i>
+        <!-- Date of birth-->
+        <div class="border-bottom pb-3 mb-3">
+          <div class="d-flex align-items-center justify-content-between">
+            <div class="pe-2">
+              <label class="form-label fw-bold">Date of birth</label>
+              <div id="birth-value">Not specified</div>
+            </div>
+            <div class="me-n3" data-bs-toggle="tooltip" title="Edit"><a class="nav-link py-0" href="#birth-collapse"
+                                                                        data-bs-toggle="collapse"><i
+              class="fi-edit"></i></a></div>
+          </div>
+          <div class="collapse" id="birth-collapse" data-bs-parent="#personal-details">
+            <div class="mt-3 pt-3 border-top">
+              <div class="input-group">
+                <input class="form-control date-picker rounded pe-5" type="text" data-bs-binded-element="#birth-value"
+                       data-datepicker-options="{&quot;altInput&quot;: true, &quot;altFormat&quot;: &quot;F j, Y&quot;, &quot;dateFormat&quot;: &quot;F j, Y&quot;}"
+                       placeholder="Choose date"><i
+                class="fi-calendar text-muted position-absolute top-50 end-0 translate-middle-y me-3"></i>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <!-- Phone number-->
-      <div class="border-bottom pb-3 mb-3">
-        <div class="d-flex align-items-center justify-content-between">
-          <div class="pe-2">
-            <label class="form-label fw-bold">Phone number</label>
-            <div id="phone-value">(302) 555-0107</div>
+        <!-- Phone number-->
+        <div class="border-bottom pb-3 mb-3">
+          <div class="d-flex align-items-center justify-content-between">
+            <div class="pe-2">
+              <label class="form-label fw-bold">Phone number</label>
+              <div id="phone-value">(302) 555-0107</div>
+            </div>
+            <div class="me-n3" data-bs-toggle="tooltip" title="Edit"><a class="nav-link py-0" href="#phone-collapse"
+                                                                        data-bs-toggle="collapse"><i
+              class="fi-edit"></i></a></div>
           </div>
-          <div class="me-n3" data-bs-toggle="tooltip" title="Edit"><a class="nav-link py-0" href="#phone-collapse" data-bs-toggle="collapse"><i class="fi-edit"></i></a></div>
-        </div>
-        <div class="collapse" id="phone-collapse" data-bs-parent="#personal-details">
-          <input class="form-control mt-3" type="text" data-bs-binded-element="#phone-value" data-bs-unset-value="Not specified" value="(302) 555-0107">
-        </div>
-      </div>
-      <!-- Address-->
-      <div class="pb-3 mb-3">
-        <div class="d-flex align-items-center justify-content-between">
-          <div class="pe-2">
-            <label class="form-label fw-bold">Address</label>
-            <div id="address-value">Not specified</div>
+          <div class="collapse" id="phone-collapse" data-bs-parent="#personal-details">
+            <input class="form-control mt-3" type="text" data-bs-binded-element="#phone-value"
+                   data-bs-unset-value="Not specified" value="(302) 555-0107">
           </div>
-          <div class="me-n3" data-bs-toggle="tooltip" title="Edit"><a class="nav-link py-0" href="#address-collapse" data-bs-toggle="collapse"><i class="fi-edit"></i></a></div>
         </div>
-        <div class="collapse" id="address-collapse" data-bs-parent="#personal-details">
-          <input class="form-control mt-3" type="text" data-bs-binded-element="#address-value" data-bs-unset-value="Not specified" placeholder="Enter address">
+        <!-- Address-->
+        <div class="pb-3 mb-3">
+          <div class="d-flex align-items-center justify-content-between">
+            <div class="pe-2">
+              <label class="form-label fw-bold">Address</label>
+              <div id="address-value">Not specified</div>
+            </div>
+            <div class="me-n3" data-bs-toggle="tooltip" title="Edit"><a class="nav-link py-0" href="#address-collapse"
+                                                                        data-bs-toggle="collapse"><i
+              class="fi-edit"></i></a></div>
+          </div>
+          <div class="collapse" id="address-collapse" data-bs-parent="#personal-details">
+            <input class="form-control mt-3" type="text" data-bs-binded-element="#address-value"
+                   data-bs-unset-value="Not specified" placeholder="Enter address">
+          </div>
         </div>
-      </div>
 
+      </div>
     </div>
   </div>
-</div>
 
-<!-- Action buttons-->
-<div class="row pt-4 mt-2">
-  <div class="col-lg-9 offset-lg-3">
-    <div class="d-flex align-items-center justify-content-between">
-      <button class="btn btn-primary rounded-pill px-3 px-sm-4" type="button">Save changes</button>
-      <button class="btn btn-link btn-sm px-0" type="button"><i class="fi-trash me-2"></i>Delete account</button>
+  <!-- Action buttons-->
+  <div class="row pt-4 mt-2">
+    <div class="col-lg-9 offset-lg-3">
+      <div class="d-flex align-items-center justify-content-between">
+        <button class="btn btn-primary rounded-pill px-3 px-sm-4" type="submit">Save changes</button>
+        <button class="btn btn-link btn-sm px-0" type="button"><i class="fi-trash me-2"></i>Delete account</button>
+      </div>
     </div>
   </div>
-</div>
+
+</form>
