--- a/Frontend/src/app/view/business-account/ba-manage/ba-manage-item/ba-manage-item.component.html
+++ b/Frontend/src/app/view/business-account/ba-manage/ba-manage-item/ba-manage-item.component.html
@@ -351,7 +351,7 @@
   </div>
 </div>
 
-<div class="row">
+<div class="row" style="margin-top: 30px">
   <div class="col-md-12 mb-3">
     <!--<label class="form-label"-->
     <!--&gt;Business type </label-->
@@ -408,7 +408,7 @@
           </button>
         </div>
         <!--<div class="tns-carousel-inner">-->
-        <img [src]="getImageSrc(item)" alt="Image">
+        <img style="height: 180px;width: 280px" [src]="getImageSrc(item)" alt="Image">
         <!--</div>-->
         <!--<img src="../../../../assets/img/catalog/06.jpg" alt="Image"></div>-->
       </div>
