--- a/Frontend/src/styles.css
+++ b/Frontend/src/styles.css
@@ -6,3 +6,11 @@
   font-size: 11px;
   font-weight: bold;
 }
+
+.filepond--wrapper{
+  margin-bottom: 0;
+  border: 1px dashed #d5d2dc;
+  border-radius: 0.75rem;
+  font-family: "Noto Sans", sans-serif;
+  cursor: pointer;
+}
